--- a/site/layouts/_default/li.html
+++ b/site/layouts/_default/li.html
@@ -13,5 +13,5 @@
 			</div>
 		{{ end }}
 	</div>
-	{{ if .Description }}<div class="border-t-8  border-solid border-green-brand"><h5 class="text-md w-64 mt-2 font-serif text-lg italic text-brand"><svg class="inline h-5 mr-1 align-middle green-brand" height="20" width="20"><circle cx="10" cy="10" r="8" stroke="transparent" fill="brand"></circle></svg>{{ .Description }}</h5></div>{{ end }}
+	{{ if .Description }}<div class="border-t-8  border-solid border-green-brand"><h5 class="text-md w-64 mt-2 font-serif text-sm text-justify font-thin italic text-brand"><svg class="inline h-5 mr-1 align-middle green-brand" height="20" width="20"><circle cx="10" cy="10" r="8" stroke="transparent" fill="brand"></circle></svg>{{ .Description }}</h5></div>{{ end }}
 </a>
