--- a/site/layouts/_default/li.html
+++ b/site/layouts/_default/li.html
@@ -9,7 +9,7 @@
 			<img src="https://res.cloudinary.com/airjoshb/image/upload/t_preview_size/v1556313746/{{ .Params.image }}" />
 		</div>
 	{{ end }}
-	{{ if .Data.Pages "Type" "update" }}
+	{{ if eq .Type "update" }}
 		<div class=""><h5 class="border-t-8 border-solid border-green-brand text-md font-serif text-sm text-justify font-thin italic text-brand pt-2"><svg class="inline h-4 mr-1 align-middle green-brand" height="15" width="15"><circle cx="7.5" cy="7.5" r="6.5" stroke="transparent" fill="brand"></circle></svg>{{ .Content }}</h5></div>
 	{{ else }}
 		{{ if .Description }}<div class=""><h5 class="border-t-8 border-solid border-green-brand text-md font-serif text-sm text-justify font-thin italic text-brand pt-2"><svg class="inline h-4 mr-1 align-middle green-brand" height="15" width="15"><circle cx="7.5" cy="7.5" r="6.5" stroke="transparent" fill="brand"></circle></svg>{{ .Description }}</h5></div>{{ end }}
