--- a/site/layouts/partials/text-and-image.html
+++ b/site/layouts/partials/text-and-image.html
@@ -6,7 +6,11 @@
 		<div class="text w-1/2 flex-grow flex-no-shrink ml-4">
 			<h2 class="{{ .headingclass }}">{{.heading}}</h2>
 			<time>{{ .date.Format "Monday, January 2nd" }}</time>
-			<p class="{{ .textclass }}">{{.text}}</p>
+			{{ if eq .Type "update" }}
+				<p class="{{ .textclass }}">{{.update}}</p>
+			{{ else }}
+				<p class="{{ .textclass }}">{{.text}}</p>
+			{{ end }}
 		</div>
 	</container>
 
