--- a/site/layouts/partials/text-and-image.html
+++ b/site/layouts/partials/text-and-image.html
@@ -6,10 +6,10 @@
 		<div class="text w-1/2 flex-grow flex-no-shrink ml-4">
 			<h2 class="{{ .headingclass }}">{{.heading}}</h2>
 			<time>{{ .date.Format "Monday, January 2nd" }}</time>
-			{{ if eq .Type "update" }}
-				<p class="{{ .textclass }}">{{.update}}</p>
-			{{ else }}
+			{{ if isset .Params 'text' }}
 				<p class="{{ .textclass }}">{{.text}}</p>
+			{{ else }}
+				<p class="{{ .textclass }}">{{.content}}</p>
 			{{ end }}
 		</div>
 	</container>
