--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -35,7 +35,7 @@
     </div>
 </header>
 <div class="flex content">
-  <div class="p-4">
+  <div class="p-4 sm:w-full md:w-1/3">
     <div class="mb-8">
       <h3 class="font-serif text-5xl text-green-brand leading-none">Latest Posts</h3>
       {{ range first 3 (where .Data.Pages "Type" "post").ByPublishDate.Reverse }}
@@ -45,7 +45,7 @@
       {{ end }}
     </div>
    </div>
-  <div class="p-4">
+  <div class="p-4 sm:w-full md:w-2/3">
     <div class="mb-8">
         <h3 class="font-serif text-5xl text-green-brand leading-none">Updates</h2>
         {{ partial "update" . }}
