--- a/site/layouts/partials/2-up.html
+++ b/site/layouts/partials/2-up.html
@@ -8,7 +8,7 @@
       <div class="ph2-ns w-50-ns">
         <img src="https://res.cloudinary.com/airjoshb/image/upload/w_350,f_auto/{{.image}}" alt="" class="center db mb3" style="width: 240px">
         <p>{{.text}}</p>
-        <!-- <a href={{.url}} target="_blank">Click to Order</a> -->
+        <a href={{.url}} target="_blank">Click to Order</a>
       </div>
       {{ end }}
     </div>
