--- a/site/layouts/partials/jumbotron.html
+++ b/site/layouts/partials/jumbotron.html
@@ -1,5 +1,5 @@
-<div class="w-3/4 m-auto overflow-hidden px-5 pt-8 pb-4" id="">
+<div class="w-full m-auto overflow-hidden px-5 pt-8 pb-4" id="">
   <div class="mb-8 flex items-end">
-    <img class="w-3/5 border-r-8 border-solid border-green-brand" src=https://res.cloudinary.com/airjoshb/image/upload/t_post_size/v1556313746/{{.imageUrl}} />
+    <img class="border-r-8 border-solid border-green-brand" src=https://res.cloudinary.com/airjoshb/image/upload/t_post_size/v1556313746/{{.imageUrl}} />
   </div>
 </div>
