--- a/site/layouts/section/products.html
+++ b/site/layouts/section/products.html
@@ -3,7 +3,23 @@
   <div class="p-4">
     {{ partial "jumbotron" (dict "imageUrl" .Params.image "title" .Title) }}
 
-    {{ partial "2-up" .Params.intro }}
+    <div class="flex flex-row">
+      <div class="ph3 mw7 center">
+        <h2 class="f2 b lh-title mb2">{{.intro.heading}}</h2>
+        <p class="mb4 mw6">{{.intro.text}}</p>
+    
+        <div class="flex flex-row mb3">
+          {{ range .blurbs }}
+          <div class="w-1/2">
+            <img src="https://res.cloudinary.com/airjoshb/image/upload/w_350,f_auto/{{.image}}" alt="" class="center db mb3" style="width: 240px">
+            <p>{{.text}}</p>
+            <a href={{.url}} target="_blank">Click to Order</a>
+          </div>
+          {{ end }}
+        </div>
+      </div>
+    </div>
+    
 
 
     {{ with .Params.main }}
